@@ -5,6 +5,7 @@ xx/xx/xx
 
 **Fixes**
 * Fixed get_image_history(): now correctly updates history with operations done since loading
+* Fixed RGB composition: compressed FITS files (.fit.fz, .fits.fz) not appearing in file selector (#1878)
 
 siril 1.4.0-RC2
 11/20/25
